--- a/package.json
+++ b/package.json
@@ -1,35 +1,19 @@
 {
-  "name": "budgetzilla",
+  "name": "budgetzilla-monorepo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "cd client && pnpm dev",
+    "build": "cd client && pnpm build && cd .. && cp -r client/dist/* server/public/",
+    "build:client": "cd client && pnpm build",
+    "build:server": "cd server && go build -o budgetzilla-server main.go",
+    "start": "cd server && ./budgetzilla-server",
+    "lint": "cd client && pnpm lint",
+    "preview": "cd client && pnpm preview",
+    "install-deps": "cd client && pnpm install"
   },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.12",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@tailwindcss/postcss": "^4.1.12",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
-  }
+  "workspaces": [
+    "client"
+  ]
 }
